Closed Bug 1569805 Opened 6 years ago Closed 6 years ago

Perma dt-wr [Tier 2] devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js | Uncaught exception - at resource://devtools/shared/protocol/Front.js:72 - Error: Connection closed, pending request to server0.conn0.child1/thread19, type frames f

Categories

(DevTools :: General, defect, P5)

defect

Tracking

(firefox-esr60 unaffected, firefox-esr68 unaffected, firefox68 unaffected, firefox69 unaffected, firefox70 fixed)

RESOLVED FIXED
Firefox 70
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox68 --- unaffected
firefox69 --- unaffected
firefox70 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: bhackett1024)

References

(Regression)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [stockwell disable-recommended])

Attachments

(1 file)

Filed by: malexandru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=258866492&repo=autoland
Full log: https://queue.taskcluster.net/v1/task/OLzFN8sfRLOsd4vMfvVU6g/runs/0/artifacts/public/logs/live_backing.log


[task 2019-07-29T20:29:20.697Z] 20:29:20 INFO - TEST-START | devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js
[task 2019-07-29T20:29:20.875Z] 20:29:20 INFO - GECKO(1640) | MIDDLEMAN 1646 /var/folders/yj/dy4b646n7nn18bfl5vh6nsrr000017/T/TempRecording.1640.1
[task 2019-07-29T20:29:20.936Z] 20:29:20 INFO - GECKO(1640) | RECORDING 1647 /var/folders/yj/dy4b646n7nn18bfl5vh6nsrr000017/T/TempRecording.1640.1
[task 2019-07-29T20:29:21.685Z] 20:29:21 INFO - GECKO(1640) | JavaScript error: chrome://global/content/browser-child.js, line 32: ReferenceError: Services is not defined
[task 2019-07-29T20:29:22.234Z] 20:29:22 INFO - GECKO(1640) | REPLAYING 1649 /var/folders/yj/dy4b646n7nn18bfl5vh6nsrr000017/T/TempRecording.1640.1
[task 2019-07-29T20:29:22.412Z] 20:29:22 INFO - GECKO(1640) | REPLAYING 1650 /var/folders/yj/dy4b646n7nn18bfl5vh6nsrr000017/T/TempRecording.1640.1
[task 2019-07-29T20:29:22.582Z] 20:29:22 INFO - GECKO(1640) | REPLAYING 1651 /var/folders/yj/dy4b646n7nn18bfl5vh6nsrr000017/T/TempRecording.1640.1
[task 2019-07-29T20:29:22.778Z] 20:29:22 INFO - GECKO(1640) | REPLAYING 1652 /var/folders/yj/dy4b646n7nn18bfl5vh6nsrr000017/T/TempRecording.1640.1
[task 2019-07-29T20:29:25.762Z] 20:29:25 INFO - GECKO(1640) | console.log: "Please file an issue: reasonType=" "interrupted"
[task 2019-07-29T20:29:31.385Z] 20:29:31 INFO - GECKO(1640) | ***** Fatal Record/Replay Error *****
[task 2019-07-29T20:29:31.385Z] 20:29:31 INFO - GECKO(1640) | HandleDirtyMemoryFault failed 0x0 MOZ_RELEASE_ASSERT(mThread->CanAccessRecording())
[task 2019-07-29T20:29:31.508Z] 20:29:31 INFO - GECKO(1640) | 2019-07-29 20:29:31: minidump.cc:3084: ERROR: MinidumpMemoryList could not store memory region 2/83, 0x70000c1abb08+0x2054f8
[task 2019-07-29T20:29:31.510Z] 20:29:31 INFO - GECKO(1640) | 2019-07-29 20:29:31: minidump.cc:5899: ERROR: GetStream could not read stream type 5
[task 2019-07-29T20:29:31.578Z] 20:29:31 INFO - GECKO(1640) | console.log: (new Error("Connection closed, pending request to server0.conn0.child1/thread19, type frames failed\n\nRequest stack:\nrequest@resource://devtools/shared/protocol/Front.js:166:14\ngenerateRequestMethods/</frontProto[name]@resource://devtools/shared/protocol/Front/FrontClassWithSpec.js:49:19\ngetFrames@resource://devtools/shared/fronts/thread.js:223:18\npaused@resource://devtools/client/debugger/src/client/firefox/events.js:50:34\nemit@resource://devtools/shared/event-emitter.js:190:24\nemit@resource://devtools/shared/event-emitter.js:271:18\nonPacket@resource://devtools/shared/protocol/Front.js:204:13\nonPacket@resource://devtools/shared/client/debugger-client.js:593:13\nsend/<@resource://devtools/shared/transport/local-transport.js:70:25\nexports.makeInfallible/<@resource://devtools/shared/ThreadSafeDevToolsUtils.js:111:22\nDevToolsUtils.executeSoonexports.executeSoon@resource://devtools/shared/DevToolsUtils.js:62:21\nsend@resource://devtools/shared/transport/local-transport.js:58:21\nsend@resource://devtools/server/main.js:1108:20\nreceiveMessage@resource://devtools/shared/transport/child-transport.js:66:16\nMessageListener.receiveMessage_addListener@resource://devtools/shared/transport/child-transport.js:40:14\nready@resource://devtools/shared/transport/child-transport.js:57:10\nconnectToFrame/</onActorCreated<@resource://devtools/server/main.js:800:24\nexports.makeInfallible/<@resource://devtools/shared/ThreadSafeDevToolsUtils.js:111:22\nMessageListener.receiveMessagetrackMessageManager@resource://devtools/server/main.js:668:14\nconnectToFrame/<@resource://devtools/server/main.js:900:7\nconnectToFrame@resource://devtools/server/main.js:654:12\nconnect@resource://devtools/server/actors/targets/frame-proxy.js:62:36\nasyncBrowserTabList.prototype._getActorForBrowser@resource://devtools/server/actors/webbrowser.js:370:16\nBrowserTabList.prototype.getTab@resource://devtools/server/actors/webbrowser.js:412:21\nonGetTab@resource://devtools/server/actors/root.js:369:35\nonPacket@resource://devtools/server/main.js:1402:58\nsend/<@resource://devtools/shared/transport/local-transport.js:70:25\nexports.makeInfallible/<@resource://devtools/shared/ThreadSafeDevToolsUtils.js:111:22\nDevToolsUtils.executeSoonexports.executeSoon@resource://devtools/shared/DevToolsUtils.js:62:21\nsend@resource://devtools/shared/transport/local-transport.js:58:21\nsend@resource://devtools/shared/protocol/Front.js:150:30\nrequest@resource://devtools/shared/protocol/Front.js:168:10\ngenerateRequestMethods/</frontProto[name]@resource://devtools/shared/protocol/Front/FrontClassWithSpec.js:49:19\ngetTab@resource://devtools/shared/fronts/root.js:252:18\ncreateTargetForTab@resource://devtools/client/framework/target.js:90:28\nasyncforTab@resource://devtools/client/framework/target.js:35:26\nattachDebugger@chrome://mochitests/content/browser/devtools/client/webreplay/mochitest/head.js:25:38\nattachRecordingDebugger@chrome://mochitests/content/browser/devtools/client/webreplay/mochitest/head.js:41:37\nasync*@chrome://mochitests/content/browser/devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js:11:21\nTester_execTest/<@chrome://mochikit/content/browser-test.js:1346:34\nTester_execTest@chrome://mochikit/content/browser-test.js:1381:11\nnextTest/<@chrome://mochikit/content/browser-test.js:1209:14\nSimpleTest.waitForFocus/waitForFocusInner/focusedOrLoaded/<@chrome://mochikit/content/tests/SimpleTest/SimpleTest.js:803:59\n", "resource://devtools/shared/protocol/Front.js", 72))
[task 2019-07-29T20:29:31.579Z] 20:29:31 INFO - TEST-INFO | started process screencapture
[task 2019-07-29T20:29:31.707Z] 20:29:31 INFO - TEST-INFO | screencapture: exit 0
[task 2019-07-29T20:29:31.708Z] 20:29:31 INFO - Buffered messages logged at 20:29:20
[task 2019-07-29T20:29:31.708Z] 20:29:31 INFO - Entering test bound
[task 2019-07-29T20:29:31.708Z] 20:29:31 INFO - Waiting for event: 'RecordingFinished' on [object ParentProcessMessageManager].
[task 2019-07-29T20:29:31.708Z] 20:29:31 INFO - Buffered messages logged at 20:29:21
[task 2019-07-29T20:29:31.709Z] 20:29:31 INFO - Console message: [JavaScript Error: "ReferenceError: Services is not defined" {file: "chrome://global/content/browser-child.js" line: 32}]
[task 2019-07-29T20:29:31.709Z] 20:29:31 INFO - Buffered messages logged at 20:29:23
[task 2019-07-29T20:29:31.709Z] 20:29:31 INFO - Console message: [JavaScript Error: "The character encoding of the HTML document was not declared. The document will render with garbled text in some browser configurations if the document contains characters from outside the US-ASCII range. The character encoding of the page must be declared in the document or in the transfer protocol." {file: "http://example.com/browser/devtools/client/webreplay/mochitest/examples/doc_rr_basic.html" line: 0}]
[task 2019-07-29T20:29:31.710Z] 20:29:31 INFO - Got event: 'RecordingFinished' on [object ParentProcessMessageManager].
[task 2019-07-29T20:29:31.710Z] 20:29:31 INFO - Buffered messages logged at 20:29:25
[task 2019-07-29T20:29:31.711Z] 20:29:31 INFO - TEST-PASS | devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js | Got one source -
[task 2019-07-29T20:29:31.711Z] 20:29:31 INFO - TEST-PASS | devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js | Source is doc_rr_basic.html -
[task 2019-07-29T20:29:31.711Z] 20:29:31 INFO - Buffered messages finished
[task 2019-07-29T20:29:31.713Z] 20:29:31 INFO - TEST-UNEXPECTED-FAIL | devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js | Uncaught exception - at resource://devtools/shared/protocol/Front.js:72 - Error: Connection closed, pending request to server0.conn0.child1/thread19, type frames failed
[task 2019-07-29T20:29:31.713Z] 20:29:31 INFO -
[task 2019-07-29T20:29:31.713Z] 20:29:31 INFO - Request stack:
[task 2019-07-29T20:29:31.713Z] 20:29:31 INFO - request@resource://devtools/shared/protocol/Front.js:166:14
[task 2019-07-29T20:29:31.713Z] 20:29:31 INFO - generateRequestMethods/</frontProto[name]@resource://devtools/shared/protocol/Front/FrontClassWithSpec.js:49:19
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - getFrames@resource://devtools/shared/fronts/thread.js:223:18
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - evaluateInTopFrame@chrome://mochitests/content/browser/devtools/client/debugger/test/mochitest/helpers.js:1740:40
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - asynccheckEvaluateInTopFrame@chrome://mochitests/content/browser/devtools/client/debugger/test/mochitest/helpers.js:1750:22
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - @chrome://mochitests/content/browser/devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js:21:9
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - Async
Tester_execTest/<@chrome://mochikit/content/browser-test.js:1346:34
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - Tester_execTest@chrome://mochikit/content/browser-test.js:1381:11
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - nextTest/<@chrome://mochikit/content/browser-test.js:1209:14
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - SimpleTest.waitForFocus/waitForFocusInner/focusedOrLoaded/<@chrome://mochikit/content/tests/SimpleTest/SimpleTest.js:803:59
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO -
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - Stack trace:
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - destroy@resource://devtools/shared/protocol/Front.js:72:23
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - TargetMixin/destroy/this._destroyer<@resource://devtools/shared/fronts/targets/target-mixin.js:565:23
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - async*destroy@resource://devtools/shared/fronts/targets/target-mixin.js:604:9
[task 2019-07-29T20:29:31.714Z] 20:29:31 INFO - destroy@resource://devtools/shared/fronts/targets/browsing-context.js:148:27

Kris, this seems to be caused by the changes in Bug 1559659, could you please look into it?

Flags: needinfo?(kwright)
Regressed by: 1559659

(In reply to Alexandru Michis [:malexandru] from comment #1)

Kris, this seems to be caused by the changes in Bug 1559659, could you please look into it?

According to the comment here in Bug 1559659, this likely is related to changes in mozilla::Atomic. Is there someone who may know more about this?

Flags: needinfo?(kwright)

Brian, do you know what may be causing this testfail? We added a mozilla::Atomic<bool> in Bug 1559659. Could that be causing an issue?

Flags: needinfo?(bhackett1024)

(In reply to Kris Wright :KrisWright from comment #3)

Brian, do you know what may be causing this testfail? We added a mozilla::Atomic<bool> in Bug 1559659. Could that be causing an issue?

Yeah, this is probably causing the problem --- mozilla::Atomic<> accesses are recorded by default, and recorded events are disallowed on JS helper threads. I'll verify this later today and post a patch.

Flags: needinfo?(bhackett1024)
Whiteboard: [stockwell disable-recommended]
Pushed by ccoroiu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/aee6126d6e00 Don't record JSContext atomic accesses, r=jandem.
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 70
Assignee: nobody → bhackett1024
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: