Bug 1569805 - Don't record JSContext atomic accesses, r=jandem.

Differential Revision: https://phabricator.services.mozilla.com/D39934