js/src/vm/JSContext.h
@@ -183,7 +183,9 @@ struct JSContext : public JS::RootingContext,
 
   // When a helper thread is using a context, it may need to periodically
   // free unused memory.
-  mozilla::Atomic<bool, mozilla::ReleaseAcquire> freeUnusedMemory;
+  mozilla::Atomic<bool, mozilla::ReleaseAcquire,
+                  mozilla::recordreplay::Behavior::DontPreserve>
+      freeUnusedMemory;
 
  public:
   // This is used by helper threads to change the runtime their context is
